Fix visual on mobile devices

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -99,7 +99,7 @@
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100%;
   transition:
     color 0.5s,
     background-color 0.5s;
